--- a/Day 06/section 02/css/responsive.css
+++ b/Day 06/section 02/css/responsive.css
@@ -4,7 +4,24 @@
 }
 
 @media screen and (max-width:425px) and (min-width:320px){
-   
+    .section-title h2 {
+        font-size: 30px;
+        text-align: center;
+    }
+    
+    .section-btn {
+        text-align: center;
+    }
+    
+    a.demo-btn-sec {
+        margin-left: 0;
+        margin-top: 10px;
+    }
+    
+    .img-absolute {
+        position: relative;
+        top: 50px;
+    }
 }
 
 
